# web4

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  WEB4ORG-STD-0001.md  config.showcase.json
crates/web4-core/: Cargo.toml
crates/web4-core/src/: api.rs  compiler.rs  error.rs  lib.rs  model.rs  traits.rs  w4ml.rs
crates/web4-core/src/runtime/: binding.rs  consent.rs  error.rs  mod.rs  schema.rs  validation.rs
crates/web4-core/tests/: api_runtime.rs  compiler_contract.rs  error_status.rs  runtime_flow.rs  w4ml_parser.rs
crates/web4-gateway/: Cargo.toml
crates/web4-gateway/src/: app.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  renderer.rs  state.rs
crates/web4-gateway/src/logic/: auth.rs  common.rs  consent.rs  content.rs  mod.rs  policy.rs
crates/web4-gateway/templates/: default.html.tera
crates/web4-gateway/tests/: config_loading.rs  gateway_integration.rs  path_safety.rs  renderer_templates.rs
docs/: CONFORMANCE-MATRIX.md  README.md  RUNBOOK.md
docs/concepts/: bindings.md  consent-modes.md  content-negotiation.md  policy-enforcement.md  w4ml-language.md  web4-model.md
docs/development/: architecture.md  contributing.md  library-api.md  testing.md
docs/getting-started/: installation.md  overview.md  quickstart.md
docs/guides/: agent-integration.md  authoring-w4ml.md  configuring-gateway.md  custom-templates.md  jwt-capabilities.md  securing-services.md
docs/reference/: config-schema.md  error-codes.md  w4ml-syntax.md
docs/reference/http-api/: capabilities.md  challenges.md  document-endpoints.md  service-invoke.md
examples/web4-root-showcase/: README.md  showcase-default-template.w4  showcase.w4
examples/web4-root-showcase/services/: calc_engine.py  math.cap_http_bridge.w4s  math.interactive_remix.w4s  math.open_local_add.w4s  (+1 more)
(+1 files in other folders)
