[workspace]
members = [
  "crates/web4-core",
  "crates/web4-gateway",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Web4 Org Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "process", "io-util", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonschema = "0.33"
jsonwebtoken = "9"
tera = "1"
