[package]
name = "web4-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
web4-core = { path = "../web4-core" }
jsonwebtoken.workspace = true
tera.workspace = true
reqwest.workspace = true
roxmltree = "0.20"
rand = "0.8"
